# drone_swarm

./: CMakeLists.txt  CMakePresets.json  README.md  Task.md  config.ini  installation-steps.md
.devcontainer/: Dockerfile  devcontainer.json
app/: CMakeLists.txt
app/src/: CLIOptions.cpp  CLIOptions.h  GridAlgo.cpp  GridAlgo.h  GridFileLoader.cpp  GridFileLoader.h  GridHandler.cpp  GridHandler.h  main.cpp
app/src/interfaces/: IGridAlgo.h  IGridLoader.h
app/src/io/: json.h
app/src/struct/: Drone.h  Grid.h  GridAlgoConfig.h  Position.h  Result.h  Step.h
data/: 100.txt  1000.txt  20.txt
tests/: CMakeLists.txt  test_clioptions.cpp
